--- a/NestCountsImputation_JM.Rmd
+++ b/NestCountsImputation_JM.Rmd
@@ -66,6 +66,19 @@ Diagnostics of the expected log predictive density indicated that the model was 
 plot(M1.loo.out)
 ```
 
+```{r}
+pareto.k <- M1.loo.out$diagnostics$pareto_k
+data.y <- na.omit(M$jags.out$jags.data$y)
+
+pareto.df <- data.frame(y = data.y,
+                        khat = pareto.k,
+                        datapoint = seq(from = 1, to = length(data.y)))
+ggplot(data = pareto.df) +   
+  geom_path(aes(x = datapoint, y = exp(y)), alpha = 0.5) +
+  geom_point(aes(x = datapoint, y = exp(y), color = khat)) 
+
+```
+
 The second model contained one slope and two variances: one for nesting season (May through September) and another for the non-nesting season (October through April). 
 
 m[t] = s + x[t-1] 
@@ -86,6 +99,20 @@ Similary to the first model, all estimated Pareto k statistics were greater than
 
 ```{r PSIS_M2, fig.cap="Figure. PSIS diagnostic plot for M2"}
 plot(M2.loo.out)
+```
+
+
+```{r}
+pareto.k <- M2.loo.out$diagnostics$pareto_k
+data.y <- na.omit(M$jags.out$jags.data$y)
+
+pareto.df <- data.frame(y = data.y,
+                        khat = pareto.k,
+                        datapoint = seq(from = 1, to = length(data.y)))
+ggplot(data = pareto.df) +   
+  geom_path(aes(x = datapoint, y = exp(y)), alpha = 0.5) +
+  geom_point(aes(x = datapoint, y = exp(y), color = khat)) 
+
 ```
 
 The third model has a constant slope and month-specific variances.
