--- a/NestCountsImputation_W.Rmd
+++ b/NestCountsImputation_W.Rmd
@@ -7,8 +7,8 @@ output: html_document
 rm(list=ls())
 knitr::opts_chunk$set(echo = TRUE)
 source("HILL_BiOp_functions.R")
-run.date <- "2018-10-22"
-run.date1 <- "2018-10-23"
+run.date <- "2018-10-25"
+run.date1 <- "2018-10-26"
 
 ```
 
@@ -78,7 +78,8 @@ x[t] ~ N(m[t], v.pro)
 y[t] ~ N(x[t], v.obs)
 
 ```{r model1, cache=TRUE, include=TRUE}
-M <- readRDS(paste0("RData/jagsout_SSAR1_logY_norm_norm_W_2006_2014_", run.date, ".rds"))
+M <- readRDS(paste0("RData/jagsout_SSAR1_logY_norm_norm_W_2006_2014_", 
+                    run.date, ".rds"))
 M1.loo.out <- M$jags.out$loo.out$loo.out
 M1.jm <- M$jags.out$jm
 ```
@@ -95,9 +96,9 @@ Looking at which data points resulted in high Pareto k values...
 pareto.k <- M1.loo.out$diagnostics$pareto_k
 data.y <- na.omit(M$jags.out$jags.data$y)
 # first log likelihood value is NA... why's that? but I'll worry about that later.
-pareto.df <- data.frame(y = data.y[2:length(data.y)],
+pareto.df <- data.frame(y = data.y,
                         khat = pareto.k,
-                        datapoint = seq(from = 1, to = (length(data.y) - 1)))
+                        datapoint = seq(from = 1, to = length(data.y)))
 ggplot(data = pareto.df) +   
   geom_path(aes(x = datapoint, y = exp(y)), alpha = 0.5) +
   geom_point(aes(x = datapoint, y = exp(y), color = khat)) 
@@ -132,9 +133,9 @@ plot(M2.loo.out)
 pareto.k <- M2.loo.out$diagnostics$pareto_k
 data.y <- na.omit(M$jags.out$jags.data$y)
 # first log likelihood value is NA... why's that? but I'll worry about that later.
-pareto.df <- data.frame(y = data.y[2:length(data.y)],
+pareto.df <- data.frame(y = data.y,
                         khat = pareto.k,
-                        datapoint = seq(from = 1, to = (length(data.y) - 1)))
+                        datapoint = seq(from = 1, to = length(data.y)))
 ggplot(data = pareto.df) +   
   geom_path(aes(x = datapoint, y = exp(y)), alpha = 0.5) +
   geom_point(aes(x = datapoint, y = exp(y), color = khat)) 
@@ -166,9 +167,9 @@ plot(M3.loo.out)
 pareto.k <- M3.loo.out$diagnostics$pareto_k
 data.y <- na.omit(M$jags.out$jags.data$y)
 # first log likelihood value is NA... why's that? but I'll worry about that later.
-pareto.df <- data.frame(y = data.y[2:length(data.y)],
+pareto.df <- data.frame(y = data.y,
                         khat = pareto.k,
-                        datapoint = seq(from = 1, to = (length(data.y) - 1)))
+                        datapoint = seq(from = 1, to = length(data.y)))
 ggplot(data = pareto.df) +   
   geom_path(aes(x = datapoint, y = exp(y)), alpha = 0.5) +
   geom_point(aes(x = datapoint, y = exp(y), color = khat)) 
@@ -201,9 +202,9 @@ plot(M4.loo.out)
 pareto.k <- M4.loo.out$diagnostics$pareto_k
 data.y <- na.omit(M$jags.out$jags.data$y)
 # first log likelihood value is NA... why's that? but I'll worry about that later.
-pareto.df <- data.frame(y = data.y[2:length(data.y)],
+pareto.df <- data.frame(y = data.y,
                         khat = pareto.k,
-                        datapoint = seq(from = 1, to = (length(data.y) - 1)))
+                        datapoint = seq(from = 1, to = length(data.y)))
 ggplot(data = pareto.df) +   
   geom_path(aes(x = datapoint, y = exp(y)), alpha = 0.5) +
   geom_point(aes(x = datapoint, y = exp(y), color = khat)) 
@@ -279,9 +280,9 @@ plot(M7.loo.out)
 pareto.k <- M7.loo.out$diagnostics$pareto_k
 data.y <- na.omit(M$jags.out$jags.data$y)
 # first log likelihood value is NA... why's that? but I'll worry about that later.
-pareto.df <- data.frame(y = data.y[2:length(data.y)],
+pareto.df <- data.frame(y = data.y,
                         khat = pareto.k,
-                        datapoint = seq(from = 1, to = (length(data.y) - 1)))
+                        datapoint = seq(from = 1, to = length(data.y)))
 ggplot(data = pareto.df) +   
   geom_path(aes(x = datapoint, y = exp(y)), alpha = 0.5) +
   geom_point(aes(x = datapoint, y = exp(y), color = khat)) 
@@ -566,7 +567,9 @@ The slope parameters indicated increasing trend to July and decreased from Augus
 We use this model to impute missing data points. First, just look at the 2006-2014 dataset. 
 
 ```{r}
-M17 <- readRDS(paste0("RData/jagsout_SSAR1_logY_norm_t_var_thetaM_W_2006_2014_", run.date, ".rds"))
+M17 <- readRDS(paste0("RData/jagsout_SSAR1_logY_norm_t_var_thetaM_W_2006_2014_",
+                      run.date, ".rds"))
+M17.jm <- M17$jags.out$jm
 
 Xs.stats <- M17$Xs.stats
 ys.stats <- M17$ys.stats
@@ -638,7 +641,8 @@ print(p.W.estimated.counts)
 
 Then, bring in the results for the entire dataset. 
 ```{r}
-M17 <- readRDS(paste0("RData/jagsout_SSAR1_logY_norm_t_var_thetaM_W_2006_2017_", run.date1, ".rds"))
+M17 <- readRDS(paste0("RData/jagsout_SSAR1_logY_norm_t_var_thetaM_W_2006_2017_",
+                      run.date1, ".rds"))
 
 M17$Xs.stats %>% mutate(season = ifelse(month < 4, year - 1, year)) %>% 
   mutate(summer = ifelse(month > 3 & month < 10, 1, 0)) -> Xs.stats
